[package]
name = "wasm_bindgen_helper_macros"
description = "helper macros for a couple arbitrary use cases"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/SiriusAshling/wasm_bindgen_helper_macros"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
wasm-bindgen = "0.2"
